[project]
name = "NoBrainerRag"
version = "0.1.2"
description = "A dead simple RAG pipeline with persistent memory and conversation namespaces."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Aarush Srivatsa"}
]

dependencies = [
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "langchain_pinecone",
    "flashrank",
    "pinecone-client",
    "python-dotenv",
    "langchain_ollama",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
